@@ -1042,21 +1042,11 @@ IWebView* createWebViewAndOffscreenWindow(HWND* webViewWindow)
 
 RetainPtr<CFURLCacheRef> sharedCFURLCache()
 {
-    HMODULE module = GetModuleHandle(TEXT("CFNetwork_debug.dll"));
-    if (!module)
-        module = GetModuleHandle(TEXT("CFNetwork.dll"));
-    if (!module)
-        return 0;
-
-    typedef CFURLCacheRef (*CFURLCacheCopySharedURLCacheProcPtr)(void);
-    if (CFURLCacheCopySharedURLCacheProcPtr copyCache = reinterpret_cast<CFURLCacheCopySharedURLCacheProcPtr>(GetProcAddress(module, "CFURLCacheCopySharedURLCache")))
-        return RetainPtr<CFURLCacheRef>(AdoptCF, copyCache());
-
-    typedef CFURLCacheRef (*CFURLCacheSharedURLCacheProcPtr)(void);
-    if (CFURLCacheSharedURLCacheProcPtr sharedCache = reinterpret_cast<CFURLCacheSharedURLCacheProcPtr>(GetProcAddress(module, "CFURLCacheSharedURLCache")))
-        return sharedCache();
-
-    return 0;
+#ifdef CFURLCacheCopySharedURLCachePresent
+    return RetainPtr<CFURLCacheRef>(AdoptCF, CFURLCacheCopySharedURLCache());
+#else
+    return CFURLCacheSharedURLCache();
+#endif
 }
 
 int main(int argc, char* argv[])
