@@ -1,5 +1,12 @@
 2009-04-15  Steve Falkenburg  <sfalken@apple.com>
 
+        Redo last build fix in a more straightforward way.
+
+        * DumpRenderTree/win/DumpRenderTree.cpp:
+        (sharedCFURLCache):
+
+2009-04-15  Steve Falkenburg  <sfalken@apple.com>
+
         Fix Windows build of DumpRenderTree.
 
         * DumpRenderTree/win/DumpRenderTree.cpp:
